[tool.poetry]
name = "world-wire-be"
version = "0.1.0"
description = ""
authors = ["dignjatovic <dusan.ignjatovic995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
pydantic-settings = "^2.1.0"
uvicorn = "^0.25.0"
celery = "^5.3.6"
polars = "^0.20.6"
requests = "^2.31.0"
humps = "^0.2.2"
sqlalchemy = "1.4"
alembic = "^1.13.1"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
python-multipart = "^0.0.7"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
